--- a/src/main/java/language_de.properties
+++ b/src/main/java/language_de.properties
@@ -6,3 +6,4 @@ filmMitwirkende = mitwirkende:
 filmBeschreibung = beschreibung:
 filmFotoUpload = Titelbild hochladen:
 filmSpeichern = Film speichern
+filmErscheinungsjahr = erscheinungsjahr:
