Film wird ausgewählt

--- a/src/main/java/language_de.properties
+++ b/src/main/java/language_de.properties
@@ -1,9 +1,10 @@
 // Filmformular
-filmName = name:
-filmGenre = genre:
-filmDauer = dauer:
-filmMitwirkende = mitwirkende:
-filmBeschreibung = beschreibung:
+filmName = Name:
+filmGenre = Genre:
+filmDauer = Dauer:
+filmMitwirkende = Mitwirkende:
+filmBeschreibung = Beschreibung:
 filmFotoUpload = Titelbild hochladen:
 filmSpeichern = Film speichern
-filmErscheinungsjahr = erscheinungsjahr:
+filmErscheinungsjahr = Erscheinungsjahr:
+filmSterne = Sterne:
